--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "nodemon": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +15,9 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mic": "^2.1.2",
-    "uuid": "^9.0.1"
+    "multer": "^1.4.5-lts.1",
+    "socket.io": "^4.7.2",
+    "socket.io-stream": "^0.9.1",
+    "uuid": "^8.1.0"
   }
 }
